@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-2a39ed3fdec1f2fbfef08716e16f267dbb8298d4  15910 ChangeLog
+29b9d23a23cbe50875955fe63d1e42429ecb9afc  16029 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 7103c2ecddea29134185e30fbf7ba2daf3f11c08  10264 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -21,23 +21,23 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 83055c532a24e778aabd9b5aa86cf9ee3d1f17a9    353 misc/evilvte.xml
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
-c292290bb9cb590cbe187c45c613e19605252493  11011 src/config.h
-1dfd073a2b86837f93b5311042a93c68b889d065 163840 src/evilvte.c
+3dac307e09c35ec039682d9c8bc176567bf04ce0  11050 src/config.h
+4146347cd357dc0604a975ae1790d915a5060172 165419 src/evilvte.c
 165ba6dfab07c1c824277184f97383e26fa7799a  15631 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk+8X48ACgkQdEpXpumNYVmDxwCbBojxBDcXKjUfnRh1Uor5pqFq
-b9kAn3RiIebX+uASbBRQ5ldN2A3wybGGiQIcBAEBCgAGBQJPvF+PAAoJELc3H0m+
-i6gZt3UQAIsVplYuQwA7AISRbCelrqAsCLzRxEYEiSEjA8kvRXFxVQGUmpTgP8mq
-hhmC67gRCRJuwfDSewo+L9aNJxNR/puVbNezFYWD7bux7FTAEOn3uAZkOVB97/te
-X5hDV4x7pnPs70mGFwJwslneR/smqkwCZTMvosTylMbAHxirS56U3kxsAJ+1i5na
-iHSbRdNHPCin/I2cfmt42BZwjdZV3dnJRKENnCqQuLjOKHsW391piJ5Eh4+YF9Wl
-7N0AwkaysiBaE7O3qJ3aOLzEIBq+1fG2xZ5LnkpZiy3WL0VFZYl1aAOnsm8YzCBl
-HsyepLegEIIkg7AZL9WJusu2IdDxlzc1H3LeEH84lIkNGpTBqdkFUgUk1dDtHwqA
-lrGkheEyqpR8E6fx8cNXVftYyjbv6V7UJdigKMo/N7kKg6fUnVbHSNDrHb/icI/V
-dz2HjClmnzjdWwszEUqQmlnUW5UXMSEP+AEA/NBGGiruAByY5Yvdlj8FSFEHy0Ep
-fwBKpadUVgQBuHWd55seZuYYg2AO7hwy9gOu/7bQv79kETpvifUiTgbdbaJflG6T
-2K2hWWdhR8bV5/VU4XG1+ZvS+lFI4AtMT7XBBmV7rbwmkLndEjVREj1suOTc3p+B
-AULlyO/l5XEis7t/VHtBACTh4md9XvGBjWGjaMCYxYvByZKZe0o8
-=/ecN
+iEYEARECAAYFAk+82yQACgkQdEpXpumNYVl2vgCfQL5EnPmlPBkJ8wZuSM/eWoEr
+g+EAn1/i+P9jLTfo6rzfml5Knk8vwle+iQIcBAEBCgAGBQJPvNskAAoJELc3H0m+
+i6gZYZUP/A4SHDvCSt63KNyQSI3Hok85tqjcC4WqKTgZOOALJbEc2AQjQafaKT4R
+Nwdo+u28f6ASrnEblp5z8RKM60RKohGP99dnfoNPrQeHCY0MfP1+memLYHSmiQRL
+UoqTIgJbNWvnnFi0xZy8P8WxkDiju8YZFaD5cBu0OT+Di2NnIg22NMvNz3Yly0m7
+ekFOpxwzC8550fBdKQAjpBWgAKIoU0TEo81f4+EOKo7z7Y6sP/8ga605lm5pHuGh
++qI0I2XiUG6m3tTdJJlnjQxwOHJkqBDu6Qj/5PiJE7FWAvL+y7YzH7BksN4SJQqC
+wt24fuMqEwptEObE9Uq+Xc3d4H4Hs+YnLU3+509cCBqIA2FOlVdPDM1mRMFA8hiR
+FFV5/cmiii2Zmx5Qq4Ej5/rDlKKUQFsT+tuxXyc4w6KqeHdA3o1WdND9QmPnRVt+
+qCTaTPRMqIQgdvhftFPzUfxI/C2eFUO9pSCQFCYIfvyvmhbOMwMWLIDXGnX5zSLe
+diMaWWJhwdlFYAXN2Ll3xvlHsmFiWz7BZv9YVSxccc1oXlNUqO3x+EpnczrmOAqN
+FEu38XU12Ku5NarHcAYcJ1LepcmrdEYlKjkV+sfGIo5M8HLORC0HhCVuDYGaCE7O
+h5lia+ZP/mZjIQE63N2q1MU4r2Q9K0F4YKYRP8PI2tmV+ug6xeCD
+=0F0Z
 -----END PGP SIGNATURE-----
